yyamamoto+sesetup@salesforce.com/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Field10__c</fullName>
        <label>法人/個人</label>
        <picklist>
            <picklistValues>
                <fullName>法人</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>個人</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Field11__c</fullName>
        <label>相談・依頼受付日時</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Field15__c</fullName>
        <label>相談分類</label>
        <picklist>
            <picklistValues>
                <fullName>商取引</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>会社経営</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>再生・事業承継</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>知的財産</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>労働問題</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>個人相談</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MAP2__c</fullName>
        <formula>HYPERLINK(&quot;http://maps.google.co.jp/maps?q=&quot; &amp; BillingState &amp; &quot;+&quot; &amp; BillingCity &amp; &quot;+&quot; &amp; BillingStreet, IMAGE(&quot;http://maps.google.com/maps/api/staticmap?center=&quot; &amp; BillingState &amp; &quot;+&quot; &amp; BillingCity &amp; &quot;+&quot; &amp; BillingStreet &amp; &quot;&amp;markers=color:red|label:S|&quot; &amp; BillingState &amp; &quot;+&quot; &amp; BillingCity &amp; &quot;+&quot; &amp; BillingStreet &amp; &quot;&amp;zoom=17&amp;size=300x300&amp;maptype=roadmap&amp;sensor=false&quot;, &quot;MAP&quot; ,300, 300) , &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>詳細</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MAP__c</fullName>
        <formula>HYPERLINK(&quot;http://maps.google.co.jp/maps?q=&quot; &amp; BillingState &amp; &quot;+&quot; &amp; BillingCity &amp; &quot;+&quot; &amp; BillingStreet, IMAGE(&quot;http://maps.google.com/maps/api/staticmap?center=&quot; &amp; BillingState &amp; &quot;+&quot; &amp; BillingCity &amp; &quot;+&quot; &amp; BillingStreet &amp; &quot;&amp;markers=color:red|label:S|&quot; &amp; BillingState &amp; &quot;+&quot; &amp; BillingCity &amp; &quot;+&quot; &amp; BillingStreet &amp; &quot;&amp;zoom=14&amp;size=300x300&amp;maptype=roadmap&amp;sensor=false&quot;, &quot;MAP&quot; ,300, 300) , &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>地図</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OPROARTS050__CloseDay__c</fullName>
        <defaultValue>0</defaultValue>
        <label>締日</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OPROARTS050__PaymentDay__c</fullName>
        <defaultValue>0</defaultValue>
        <label>支払日</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OPROARTS050__PaymentMonth__c</fullName>
        <defaultValue>1</defaultValue>
        <label>支払月</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OPROARTS050__PriceRate__c</fullName>
        <defaultValue>1</defaultValue>
        <label>仕切率(%)</label>
        <precision>8</precision>
        <scale>5</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Rank__c</fullName>
        <label>顧客ランク</label>
        <picklist>
            <picklistValues>
                <fullName>Aランク</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bランク</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cランク</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dランク</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>x01</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>Field9__c</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.RATING</columns>
        <filterScope>Everything</filterScope>
        <label>01. すべての取引先</label>
    </listViews>
    <listViews>
        <fullName>x02</fullName>
        <filterScope>Mine</filterScope>
        <label>02. 私の取引先</label>
    </listViews>
    <listViews>
        <fullName>x03</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>03. 今週登録分</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>